
set(ASL_HEADERS "${PROJECT_SOURCE_DIR}/asl_interface/src" )
ADD_EXECUTABLE(asl_test src/simple_test.cpp)
TARGET_INCLUDE_DIRECTORIES( asl_test PUBLIC ${ASL_HEADERS} )
#SET_PROPERTY(TARGET asl_test PROPERTY ENABLE_EXPORTS)
TARGET_LINK_LIBRARIES( asl_test pynumero_ASL)

INSTALL(TARGETS asl_test
        DESTINATION bin
       )
